TTK-23444 update PaellaPlayer to make compatibility with SF4

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PumukitPaellaPlayerBundle:PaellaPlayer:index.html.twig' %}
+{% extends '@PumukitPaellaPlayer/PaellaPlayer/index.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
