--- a/Resources/views/BasePlayer/player.html.twig
+++ b/Resources/views/BasePlayer/player.html.twig
@@ -1,9 +1,9 @@
-{% extends 'PumukitWebTVBundle::layout.html.twig' %}
+{% extends '@PumukitWebTV/layout.html.twig' %}
 {% set hide_slidebar = true %}
 
 {% block stylesheets %}
     <style>
-        body {margin:0px;}
+        body {margin:0;}
     </style>
 {% endblock %}
 
