--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PumukitWebTVBundle::layout.html.twig' %}
+{% extends '@PumukitWebTV/layout.html.twig' %}
 {% set hide_slidebar = true %}
 
 {% block meta %}
@@ -29,7 +29,7 @@
    {# Added while waiting for paella upstream #}
    video {
        background: black;
-       box-shadow: 0px 0px 6px #000;
+       box-shadow: 0 0 6px #000;
    }
 
    {# Added while waiting for paella fix TTK-16366 #}
