TTK-24658: Add content to streams

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -44,7 +44,7 @@
     "editor":{
         "enabled":false
     },
-    "defaultProfile":"slide_professor",
+    "defaultProfile":"presenter_presentation",
     "data":{
         "enabled":true,
         "dataDelegates":{
