--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -6,7 +6,7 @@
         "videoQualityStrategyParams":{ "maxAutoQualityRes":720 },
         "reloadOnFullscreen": false,
         "videoZoom": {
-            "enabled":false,
+            "enabled":true,
             "max":800,
             "minWindowSize":500
         },
@@ -75,25 +75,25 @@
             "edu.harvard.dce.paella.flexSkipForwardPlugin": {"enabled":true, "direction": "Forward", "seconds": 30},
             "es.teltek.paella.integratedDurationPlugin": {"enabled":true},
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
-            "es.upv.paella.extendedTabAdapterPlugin": {"enabled":false},
+            "es.upv.paella.extendedTabAdapterPlugin": {"enabled":true},
             "es.upv.paella.footprintsPlugin": {"enabled":true, "skin":"custom", "fillStyle": "green", "strokeStyle": "green"},
             "es.upv.paella.frameControlPlugin":  {"enabled": true, "showFullPreview": "auto", "showCaptions":false},
             "es.upv.paella.fullScreenButtonPlugin": {"enabled":true, "reloadOnFullscreen":{ "enabled":true, "keepUserSelection":true }},
-            "es.upv.paella.helpPlugin": {"enabled":false, "langs":["en","es"]},
+            "es.upv.paella.helpPlugin": {"enabled":true, "langs":["en","es"]},
             "es.upv.paella.multipleQualitiesPlugin": {"enabled":true, "showWidthRes":true},
             "es.upv.paella.playbackRatePlugin": {"enabled":true, "availableRates": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
             "es.upv.paella.playPauseButtonPlugin": {"enabled":true},
             "es.upv.paella.searchPlugin": {"enabled":true, "sortType":"time", "colorSearch":false},
-            "es.upv.paella.socialPlugin": {"enabled":false},
+            "es.upv.paella.sharePlugin": {"enabled":true, "minWindowSize": 600},
             "es.upv.paella.themeChooserPlugin":  {"enabled":false},
             "es.upv.paella.viewModePlugin": { "enabled": true },
             "es.upv.paella.volumeRangePlugin":{"enabled":true, "showMasterVolume": false, "showSlaveVolume": false },
             "es.upv.paella.pipModePlugin": { "enabled":true },
             "es.upv.paella.ratePlugin": { "enabled":false },
-            "es.upv.paella.videoZoomPlugin": { "enabled":false },
+            "es.upv.paella.videoZoomPlugin": { "enabled":true, "showButtons":true },
             "es.upv.paella.audioLanguage": { "enabled":false },
             "es.upv.paella.audioSelector": { "enabled":true },
-            "es.upv.paella.videoZoomToolbarPlugin": { "enabled":false, "targetStreamIndex":0 },
+            "es.upv.paella.videoZoomToolbarPlugin": { "enabled":true, "targetStreamIndex":0 },
             "es.upv.paella.videoZoomTrack4kPlugin": { "enabled":false, "targetStreamIndex":0, "autoModeByDefault":false },
             "es.upv.paella.airPlayPlugin": { "enabled":false },
 
@@ -166,7 +166,9 @@
                  "es.teltek.paella.usertracking.xAPISaverPlugin": {"enabled": true, "endpoint": "{{ xapi_endpoint }}", "auth":"{{ xapi_auth }}"},
             {% endif %}
             "es.upv.paella.usertracking.elasticsearchSaverPlugin": { "enabled": false, "url": "http://my.elastic.server"},
-            "es.upv.paella.usertracking.GoogleAnalyticsSaverPlugIn": { "enabled": false, "trackingID": "UA-XXXXXXXX-Y" }
+            "es.upv.paella.usertracking.GoogleAnalyticsSaverPlugIn": { "enabled": false, "trackingID": "UA-XXXXXXXX-Y" },
+            "//*****  Keyboard plugins": "",
+            "es.upv.paella.defaultKeysPlugin": {"enabled": true }
 
 
         }
