--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -71,17 +71,17 @@
         "//**** For a list of available plugins and configuration, go to": "https://github.com/polimediaupv/paella/blob/master/doc/plugins.md",
         "list":{
             "//****": "Button Plugins",
-            "edu.harvard.dce.paella.flexSkipPlugin": {"enabled":true, "direction": "Rewind", "seconds": 10},
+            "edu.harvard.dce.paella.flexSkipPlugin": {"enabled":true, "direction": "Rewind", "seconds": 10, "minWindowSize": 510 },
             "edu.harvard.dce.paella.flexSkipForwardPlugin": {"enabled":true, "direction": "Forward", "seconds": 30},
-            "es.teltek.paella.integratedDurationPlugin": {"enabled":true},
+            "es.teltek.paella.integratedDurationPlugin": {"enabled":true, "minWindowSize": 450 },
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
-            "es.upv.paella.extendedTabAdapterPlugin": {"enabled":true},
+            "es.upv.paella.extendedTabAdapterPlugin": {"enabled":true, "minWindowSize": 400},
             "es.upv.paella.footprintsPlugin": {"enabled":true, "skin":"custom", "fillStyle": "green", "strokeStyle": "green"},
-            "es.upv.paella.frameControlPlugin":  {"enabled": true, "showFullPreview": "auto", "showCaptions":false},
+            "es.upv.paella.frameControlPlugin":  {"enabled": true, "showFullPreview": "auto", "showCaptions":false, "minWindowSize": 450 },
             "es.upv.paella.fullScreenButtonPlugin": {"enabled":true, "reloadOnFullscreen":{ "enabled":true, "keepUserSelection":true }},
-            "es.upv.paella.helpPlugin": {"enabled":true, "langs":["en","es"]},
-            "es.upv.paella.multipleQualitiesPlugin": {"enabled":true, "showWidthRes":true},
-            "es.upv.paella.playbackRatePlugin": {"enabled":true, "availableRates": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
+            "es.upv.paella.helpPlugin": {"enabled":true, "langs":["en","es"], "minWindowSize": 650 },
+            "es.upv.paella.multipleQualitiesPlugin": {"enabled":true, "showWidthRes":true, "minWindowSize": 550 },
+            "es.upv.paella.playbackRatePlugin": {"enabled":true, "availableRates": [0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2], "minWindowSize": 500 },
             "es.upv.paella.playPauseButtonPlugin": {"enabled":true},
             "es.upv.paella.searchPlugin": {"enabled":true, "sortType":"time", "colorSearch":false},
             "es.upv.paella.sharePlugin": {"enabled":true, "minWindowSize": 600},
@@ -92,8 +92,8 @@
             "es.upv.paella.ratePlugin": { "enabled":false },
             "es.upv.paella.videoZoomPlugin": { "enabled":true, "showButtons":true },
             "es.upv.paella.audioLanguage": { "enabled":false },
-            "es.upv.paella.audioSelector": { "enabled":true },
-            "es.upv.paella.videoZoomToolbarPlugin": { "enabled":true, "targetStreamIndex":0 },
+            "es.upv.paella.audioSelector": { "enabled":true, "minWindowSize": 400  },
+            "es.upv.paella.videoZoomToolbarPlugin": { "enabled":true, "targetStreamIndex":0, "minWindowSize": 500 },
             "es.upv.paella.videoZoomTrack4kPlugin": { "enabled":false, "targetStreamIndex":0, "autoModeByDefault":false },
             "es.upv.paella.airPlayPlugin": { "enabled":false },
 
