TTK-25231: Add user agent check for tails

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -235,7 +235,7 @@
             loadPaella('playerContainer', '{{ multimediaObject.id }}');
         {% endif %}
 
-        {% if tail %}
+        {% if tail and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
             paella.events.bind(paella.events.endVideo, function (event) {
                 introOrTailVideo("tail");
             });
