--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -188,29 +188,32 @@
             if (typeVideo == "intro") {
                 {% if intro %}
                     video.src = "{{ absolute_url(track_url(intro)) }}";
+                    video.poster = "{{ multimediaObject|first_url_pic(true) }}";
                 {% endif %}
             } else {
                 {% if tail %}
                     video.src = "{{ absolute_url(track_url(tail)) }}";
                 {% endif %}
             }
-            video.poster = "{{ multimediaObject|first_url_pic(true) }}";
-            video.id = "intro";
+            
+            video.id = (typeVideo == "intro") ? 'intro' : 'tail';
             video.addEventListener('ended', onEndedVideo);
             video.autoplay = "{{ autostart != 'false' }}";
             video.muted= base.userAgent.browser.IsMobileVersion;
 
             skipContainer.id = "skipContainer";
-            videoContainer.id = "introContainer";
+            videoContainer.id = (typeVideo == "intro") ? 'introContainer' : 'tailContainer';
             overlay.id = "overlay";
             skipContainer.addEventListener("click", onEndedVideo);
 
             skipContainer.innerHTML = (typeVideo == "intro") ? '{{ "Next up" | trans }}' : '{{ "Finish" | trans }}';
 
-            videoContainer.appendChild(video);
-            videoContainer.appendChild(skipContainer);
-            videoContainer.appendChild(overlay);
-            container.appendChild(videoContainer);
+            if(!document.querySelector("#" + video.id)) {
+                videoContainer.appendChild(video);
+                videoContainer.appendChild(skipContainer);
+                videoContainer.appendChild(overlay);
+                container.appendChild(videoContainer);
+            }
 
             playPauseCanvas(overlay, video);
 
