--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -72,7 +72,7 @@
         "list":{
             "//****": "Button Plugins",
             "edu.harvard.dce.paella.flexSkipPlugin": {"enabled":true, "direction": "Rewind", "seconds": 10, "minWindowSize": 510 },
-            "edu.harvard.dce.paella.flexSkipForwardPlugin": {"enabled":true, "direction": "Forward", "seconds": 30},
+            "edu.harvard.dce.paella.flexSkipForwardPlugin": {"enabled":true, "direction": "Forward", "seconds": 30, "minWindowSize": 510 },
             "es.teltek.paella.integratedDurationPlugin": {"enabled":true, "minWindowSize": 450 },
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
             "es.upv.paella.extendedTabAdapterPlugin": {"enabled":true, "minWindowSize": 400},
@@ -136,7 +136,8 @@
                 ]
 
             },
-            "es.upv.paella.dualStreamProfilePlugin": { "enabled":true,
+            "es.upv.paella.dualStreamProfilePlugin": { 
+                "enabled":true,
                 "videoSets": [
                 { "icon":"slide_professor_icon.svg", "id":"presenter_presentation", "content":["presenter","presentation"] },
                 { "icon":"slide_professor_icon.svg", "id":"presenter2_presentation", "content":["presenter-2","presentation"] },
