--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -125,7 +125,7 @@
         function playPauseCanvas(mainContainer, video){
             const icon = document.createElement('canvas');
             icon.className = 'playButtonOnScreenIcon';
-            icon.style.display = "{{ autostart != 'false' ? 'none' : 'block' }}";
+            icon.style.display = (video.autoplay) ?  'none' : 'block' ;
             if(/^((?!chrome|android).)*safari/i.test(navigator.userAgent)) {
                 icon.style.display = 'block';
             }
@@ -188,29 +188,32 @@
             if (typeVideo == "intro") {
                 {% if intro %}
                     video.src = "{{ absolute_url(track_url(intro)) }}";
+                    video.poster = "{{ multimediaObject|first_url_pic(true) }}";
                 {% endif %}
             } else {
                 {% if tail %}
                     video.src = "{{ absolute_url(track_url(tail)) }}";
                 {% endif %}
             }
-            video.poster = "{{ multimediaObject|first_url_pic(true) }}";
-            video.id = "intro";
+            
+            video.id = (typeVideo == "intro") ? 'intro' : 'tail';
             video.addEventListener('ended', onEndedVideo);
-            video.autoplay = "{{ autostart != 'false' }}";
-            video.muted= base.userAgent.browser.IsMobileVersion;
+            video.autoplay = (typeVideo == "intro") ?  "{{ autostart != 'false' }}" : "true";
+            video.muted = base.userAgent.browser.IsMobileVersion;
 
             skipContainer.id = "skipContainer";
-            videoContainer.id = "introContainer";
+            videoContainer.id = (typeVideo == "intro") ? 'introContainer' : 'tailContainer';
             overlay.id = "overlay";
             skipContainer.addEventListener("click", onEndedVideo);
 
             skipContainer.innerHTML = (typeVideo == "intro") ? '{{ "Next up" | trans }}' : '{{ "Finish" | trans }}';
 
-            videoContainer.appendChild(video);
-            videoContainer.appendChild(skipContainer);
-            videoContainer.appendChild(overlay);
-            container.appendChild(videoContainer);
+            if(!document.querySelector("#" + video.id)) {
+                videoContainer.appendChild(video);
+                videoContainer.appendChild(skipContainer);
+                videoContainer.appendChild(overlay);
+                container.appendChild(videoContainer);
+            }
 
             playPauseCanvas(overlay, video);
 
@@ -226,6 +229,8 @@
             }
         }
 
+        var firstPlay = false;
+
         {% if intro and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
             introOrTailVideo("intro");
             loadPaella('playerContainer', '{{ multimediaObject.id }}');
@@ -233,11 +238,21 @@
             loadPaella('playerContainer', '{{ multimediaObject.id }}');
         {% endif %}
 
-        {% if tail and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
-            paella.events.bind(paella.events.endVideo, function (event) {
-                introOrTailVideo("tail");
+        paella.events.bind(paella.events.endVideo, function (event) {
+            {% if tail and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
+                    introOrTailVideo("tail");
+                    firstPlay = true;
+            {% endif %}
+            paella.events.bind(paella.events.play, function (event) {
+                {% if intro and not (app.request.headers.get('user-agent') matches '/Mobi/') %}
+                    if (firstPlay) {
+                        introOrTailVideo("intro");
+                        paella.player.pause();
+                        firstPlay = false;
+                    }
+                {% endif %}
             });
-        {% endif %}
+        });
 
         function setPaellaProfile(profileName) {
             $('.viewModeItemButton').removeClass('selected');
