--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -73,7 +73,7 @@
             "//****": "Button Plugins",
             "edu.harvard.dce.paella.flexSkipPlugin": {"enabled":true, "direction": "Rewind", "seconds": 10, "minWindowSize": 510 },
             "edu.harvard.dce.paella.flexSkipForwardPlugin": {"enabled":true, "direction": "Forward", "seconds": 30, "minWindowSize": 510 },
-            "es.teltek.paella.integratedDurationPlugin": {"enabled":true, "minWindowSize": 450 },
+            "es.teltek.paella.integratedDurationPlugin": {"enabled":true },
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
             "es.upv.paella.extendedTabAdapterPlugin": {"enabled":true, "minWindowSize": 400},
             "es.upv.paella.footprintsPlugin": {"enabled":true, "skin":"custom", "fillStyle": "green", "strokeStyle": "green"},
@@ -87,7 +87,7 @@
             "es.upv.paella.sharePlugin": {"enabled":true, "minWindowSize": 600},
             "es.upv.paella.themeChooserPlugin":  {"enabled":false},
             "es.upv.paella.viewModePlugin": { "enabled": true },
-            "es.upv.paella.volumeRangePlugin":{"enabled":true, "showMasterVolume": false, "showSlaveVolume": false },
+            "es.upv.paella.volumeRangePlugin":{ "enabled":true, "showMasterVolume": true, "showSlaveVolume": false },
             "es.upv.paella.pipModePlugin": { "enabled":true },
             "es.upv.paella.ratePlugin": { "enabled":false },
             "es.upv.paella.videoZoomPlugin": { "enabled":true, "showButtons":true },
