--- a/Resources/public/paella/player/resources/style/style_light_small.css
+++ b/Resources/public/paella/player/resources/style/style_light_small.css
@@ -101,7 +101,7 @@ i.button-icon.icon-screen {
   font-size: 14.64px;
   padding-left: 0px;
 }
-.play-button-on-screen {
+button.play-button-on-screen {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -114,6 +114,7 @@ i.button-icon.icon-screen {
   z-index: 50;
   width: 100%;
   height: 100%;
+  background-color: transparent;
 }
 .play-button-on-screen .play-icon {
   width: 300px;
@@ -2399,6 +2400,12 @@ a.btn {
 .icon-IcoMoon:before {
   content: "\eb26";
 }
+.buttonPlugin.flexSkip_Rewind_10 {
+  background-position: -205% 22%;
+}
+.buttonPlugin.flexSkip_Forward_30 {
+  background-position: -200% 22%;
+}
 .playButtonOnScreen_Always {
   position: absolute;
   opacity: 0.7;
@@ -2423,11 +2430,36 @@ a.btn {
 .play-button-on-screen.dimmed .play-icon:hover {
   opacity: 1;
 }
-.buttonPlugin.flexSkip_Rewind_10 {
-  background-position: -205% 22%;
+.buttonPlugin.playlistPlugin {
+  background-position: -88.3% -85.5%;
+  background-image: url(../images/paella_icons_light.png);
+  background-size: 720px 360px;
 }
-.buttonPlugin.flexSkip_Forward_30 {
-  background-position: -200% 22%;
+.buttonPluginPopUp.playlistPlugin {
+  background-image: none;
+  min-width: 40px;
+  width: 500%;
+  min-height: 40px;
+  max-height: 150px;
+  overflow: auto;
+  text-align: left;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton {
+  cursor: pointer;
+  text-align: left;
+  text-transform: capitalize;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton:hover {
+  background-color: #faa166;
+}
+.buttonPluginPopUp.playlistPlugin .videobutton.playing {
+  font-style: italic;
+  font-weight: bold;
+  padding-left: 15px;
 }
 .integratedDurationButton {
   width: 112px !important;
@@ -2680,6 +2712,21 @@ textarea {
   color: #438bc5;
   text-decoration: underline;
 }
+.buttonPlugin.footPrints {
+  background-position: -700% 0%;
+}
+.footPrintsContainer {
+  height: 20px;
+  width: 100%;
+  overflow: hidden;
+  display: block;
+}
+.footPrintsCanvas {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: inline-block;
+}
 .buttonPlugin.extendedTabAdapterPlugin {
   background-position: -500% -200%;
 }
@@ -2749,21 +2796,6 @@ textarea {
 }
 .extendedTabAdapterPlugin > .tabsPluginContainer > .tabsContentContainer > .tabContent.disabled {
   display: none;
-}
-.buttonPlugin.footPrints {
-  background-position: -700% 0%;
-}
-.footPrintsContainer {
-  height: 20px;
-  width: 100%;
-  overflow: hidden;
-  display: block;
-}
-.footPrintsCanvas {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: inline-block;
 }
 .frameControlContainer {
   height: 87px;
@@ -4034,9 +4066,6 @@ input[type=range]:focus::-ms-fill-upper {
 .related-video-container .related-video-link p {
   width: 100%;
   text-align: center;
-}
-.buttonPlugin.showEditorButton {
-  pointer-events: all;
 }
 .buttonPluginPopUp.videoZoomToolbar {
   width: 50px;
